Created page style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,11 @@
-/*
- * Overwritten by RailsBricks
- *
- *= require_self
- */
-@import "railsbricks_custom";
 
+@import "railsbricks_custom";
+@import "contacts";
+@import "content";
+@import "crew";
+@import "flat-ui";
+@import "footer";
+@import "header";
+@import "icon-font";
+@import "projects";
 
