--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,105 @@
-<% title("Home Page") %>
-<h1><i class="fa fa-home"></i> Home Page <small>views/pages/home.html.erb</small></h1>
+<% title("Home") %>
+<section class="header-10-sub v-center">
+    <div class="background">
+        &nbsp;
+    </div>
+    <div>
+        <div class="container">
+            <div class="hero-unit">
+                <h1>Startup Framework is a set of components</h1>
+                <p>
+                    We’ve created the product that will help your
+                    <br/>
+                    startup to look even better.
+                </p>
+            </div>
+        </div>
+    </div>
+    <a class="control-btn fui-arrow-down" href="#"> </a>
+</section>
+<section class="content-12">
+    <a class="wide btn-wide" href="#"><b>Buy Gramm App</b> for $9</a>
+</section>
+<section class="crew-4">
+	<div class="container">
+	  <h3>Startup Framework<br/>
+	    The Second Sneak-Peek of Startup Framework</h3>
+	  <div class="members">
+	    <div class="member-wrapper">
+	      <div class="member">
+	        <div class="photo-wrapper">
+	          <div class="photo">
+	            <img src="../../common-files/img/crew/vladimir-k.png" alt="">
+	          </div>
+	          <div class="overlay">
+	            <a href="#"><span class="fui-vimeo"></span></a>
+	            <a href="#"><span class="fui-facebook"></span></a>
+	            <a href="#"><span class="fui-twitter"></span></a>
+	          </div>
+	        </div>
+	        <div class="info">
+	          <div class="name">Vladimir Kudinov</div>
+	          <b>Designer</b> who makes easy to change and easy to create new elements.
+	          <div class="contacts">
+	            <a href="#">http://vladimirkudinov.com</a>
+	            <br>
+	            <a href="#">@stSilent</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="member-wrapper">
+	      <div class="member">
+	        <div class="photo-wrapper">
+	          <div class="photo">
+	            <img src="../../common-files/img/crew/sergey-s.png" alt="">
+	          </div>
+	          <div class="overlay">
+	            <a href="#"><span class="fui-vimeo"></span></a>
+	            <a href="#"><span class="fui-facebook"></span></a>
+	            <a href="#"><span class="fui-twitter"></span></a>
+	          </div>
+	        </div>
+	        <div class="info">
+	          <div class="name">Sergey Shmidt</div>
+	          <b>Designer</b> who makes easy to change and easy to create new elements.
+	          <div class="contacts">
+	            <a href="#">http://vladimirkudinov.com</a>
+	            <br>
+	            <a href="#">@stSilent</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="member-wrapper">
+	      <div class="member">
+	        <div class="photo-wrapper">
+	          <div class="photo">
+	            <img src="../../common-files/img/crew/adrian-v.png" alt="">
+	          </div>
+	          <div class="overlay">
+	            <a href="#"><span class="fui-vimeo"></span></a>
+	            <a href="#"><span class="fui-facebook"></span></a>
+	            <a href="#"><span class="fui-twitter"></span></a>
+	          </div>
+	        </div>
+	        <div class="info">
+	          <div class="name">Adrian Valeanu</div>
+	          <b>Designer</b> who makes easy to change and easy to create new elements.
+	          <div class="contacts">
+	            <a href="#">http://vladimirkudinov.com</a>
+	            <br>
+	            <a href="#">@stSilent</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<!--/.container-->
+</section>
+<div class="footer-12">
+	<div class="container">
+	    Made with <span class="fui-heart"> </span> in The Lab
+	</div>
+</div>
