--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,20 +1,8 @@
-<div id="footer">
-  <div class="container">
-    
-    <div class="row footer-first-row">
-      
-      <div class="col-xs-12 text-center">
-        <p><small>
-          &copy; <%= Time.now.year %> - Yourself!
-          <br/>
-          Assembled with <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
-        </small></p>
-      </div>
-      
+<footer class="footer-4 bg-midnight-blue">
+    <div class="container">
+        <a class="brand" href="#">Tombstone || By Team Wyncode</a>
     </div>
-    
-  </div>
-</div>
+</footer>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
