--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,18 +1,17 @@
-<nav class="navbar navbar-inverse">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
-      </ul>
-    </div>
+<div class="container">
+  <div class="navbar col-sm-12" role="navigation">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle"></button>
+          <a class="brand" href="#">Startup</a>
+       </div>
+      <div class="collapse navbar-collapse pull-right">
+          <ul class="nav pull-left">
+            <%= render 'layouts/navigation_links' %>
+          </ul>
+          <form class="navbar-form pull-left">
+              <a class="btn btn-success" href="#">Buy Now</a>
+          </form>
+      </div>
   </div>
-</nav>
+</div>
+<div class="header-background"></div>
