--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,11 +6,11 @@
     <div>
         <div class="container">
             <div class="hero-unit">
-                <h1>Startup Framework is a set of components</h1>
+                <h1 style="text-transform: uppercase;">From the grave to your wallet</h1>
                 <p>
-                    We’ve created the product that will help your
+                    Tombstone creates two keys that can be joined
                     <br/>
-                    startup to look even better.
+                    in order to access your bit wallet.
                 </p>
             </div>
         </div>
