--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer-4 bg-midnight-blue">
     <div class="container">
-        <a class="brand" href="#">Tombstone || By Team Wyncode</a>
+        <a class="brand" href="http://miamibitcoinhackathon.com/teams/wyncode" target="_blank">Tombstone || By Team Wyncode</a>
     </div>
 </footer>
 <script>
