--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
 <% title("Home") %>
 <section class="header-10-sub v-center">
     <div class="background">
-        &nbsp;
+        <video autoplay="" id="bgvid" loop="" muted="">
+<source src="//s3.amazonaws.com/miamibitcoinhackathon/assets/miami-fe8bf1afbf8fb94c746658135b001eaa.webm" type="video/webm">
+<source src="//s3.amazonaws.com/miamibitcoinhackathon/assets/miami-aa88d3b59f53cde9ffab4f866a69a0d8.mp4" type="video/mp4">
+<source src="//s3.amazonaws.com/miamibitcoinhackathon/assets/miami-9a74f703d10fcbde57b4b0818beb2368.ogv" type="video/ogg">
+</video>
     </div>
     <div>
         <div class="container">
@@ -15,15 +19,15 @@
             </div>
         </div>
     </div>
-    <a class="control-btn fui-arrow-down" href="#"> </a>
+    <a class="control-btn fa fa-angle-down fa-4x" href="#content-12"> </a>
 </section>
 <section class="content-12">
-    <a class="wide btn-wide" href="#"><b>Buy Gramm App</b> for $9</a>
+	<%= link_to "Don't wait until it's to late // Get Started Now!", new_user_registration_path, class: "wide btn-wide" %>
 </section>
 <section class="crew-4">
 	<div class="container">
-	  <h3>Startup Framework<br/>
-	    The Second Sneak-Peek of Startup Framework</h3>
+	  <h3>The Crew<br/>
+	    We built this thing in 24/hrs</h3>
 	  <div class="members">
 	    <div class="member-wrapper">
 	      <div class="member">
@@ -32,18 +36,18 @@
 	            <img src="../../common-files/img/crew/vladimir-k.png" alt="">
 	          </div>
 	          <div class="overlay">
-	            <a href="#"><span class="fui-vimeo"></span></a>
-	            <a href="#"><span class="fui-facebook"></span></a>
-	            <a href="#"><span class="fui-twitter"></span></a>
+	            <a href="https://blockchain.info/address/1GN4ENR3qgXmwB82NprT6zuBfUShev3Aca" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
+	            <a href="https://github.com/gitney"><span class="fa fa-github fa-3x"></span></a>
+	            <a href="https://twitter.com/NeyHernandez3"><span class="fa fa-twitter fa-3x"></span></a>
 	          </div>
 	        </div>
 	        <div class="info">
-	          <div class="name">Vladimir Kudinov</div>
-	          <b>Designer</b> who makes easy to change and easy to create new elements.
+	          <div class="name">Ney Hernandez</div>
+	          <b>Front Developer</b> who makes easy to change and easy to create new elements.
 	          <div class="contacts">
-	            <a href="#">http://vladimirkudinov.com</a>
+	            <a href="https://github.com/gitney" target="_blank">https://github.com/gitney</a>
 	            <br>
-	            <a href="#">@stSilent</a>
+	            <a href="https://twitter.com/NeyHernandez3" target="_blank">@NeyHernandez3</a>
 	          </div>
 	        </div>
 	      </div>
@@ -55,18 +59,18 @@
 	            <img src="../../common-files/img/crew/sergey-s.png" alt="">
 	          </div>
 	          <div class="overlay">
-	            <a href="#"><span class="fui-vimeo"></span></a>
-	            <a href="#"><span class="fui-facebook"></span></a>
-	            <a href="#"><span class="fui-twitter"></span></a>
+	            <a href="https://blockchain.info/address/1PYQWY9KTu6xXBsYcpbrhWeKvtnQH3kWw5" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
+	            <a href="https://github.com/isaacito" target="_blank"><span class="fa fa-github fa-3x"></span></a>
+	            <a href="https://twitter.com/i_wein" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
 	          </div>
 	        </div>
 	        <div class="info">
-	          <div class="name">Sergey Shmidt</div>
-	          <b>Designer</b> who makes easy to change and easy to create new elements.
+	          <div class="name">Isaac Weinbach</div>
+	          <b>The Heartbeat</b> who makes easy to change and easy to create new elements.
 	          <div class="contacts">
-	            <a href="#">http://vladimirkudinov.com</a>
+	            <a href="http://www.isaacweinbach.co/" target="_blank">http://isaacweinbach.co/</a>
 	            <br>
-	            <a href="#">@stSilent</a>
+	            <a href="https://twitter.com/i_wein" target="_blank">@i_Wein</a>
 	          </div>
 	        </div>
 	      </div>
@@ -78,18 +82,89 @@
 	            <img src="../../common-files/img/crew/adrian-v.png" alt="">
 	          </div>
 	          <div class="overlay">
-	            <a href="#"><span class="fui-vimeo"></span></a>
-	            <a href="#"><span class="fui-facebook"></span></a>
-	            <a href="#"><span class="fui-twitter"></span></a>
+	            <a href="https://blockchain.info/address/1HksghkAu5HrAW8wJGFtonvtz3YRe7ruoU" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
+	            <a href="https://github.com/CyberStrike" target="_blank"><span class="fa fa-github fa-3x"></span></a>
+	            <a href="https://twitter.com/cyberstrike" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
 	          </div>
 	        </div>
 	        <div class="info">
-	          <div class="name">Adrian Valeanu</div>
-	          <b>Designer</b> who makes easy to change and easy to create new elements.
+	          <div class="name">Chris Scott</div>
+	          <b>Product Designer</b> who makes easy to change and easy to create new elements.
 	          <div class="contacts">
-	            <a href="#">http://vladimirkudinov.com</a>
+	            <a href="https://github.com/CyberStrike" target="_blank">https://github.com/CyberStrike</a>
 	            <br>
-	            <a href="#">@stSilent</a>
+	            <a href="https://twitter.com/cyberstrike" target="_blank">@cyberstrike</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	  	  <div class="members">
+	    <div class="member-wrapper">
+	      <div class="member">
+	        <div class="photo-wrapper">
+	          <div class="photo">
+	            <img src="../../common-files/img/crew/vladimir-k.png" alt="">
+	          </div>
+	          <div class="overlay">
+	            <a href="https://blockchain.info/address/1DAQUFD2Jypu7vEqiydBLiBhev8UZi7G69" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
+	            <a href="https://github.com/Ameji012" target="_blank"><span class="fa fa-github fa-3x"></span></a>
+	            <a href="https://twitter.com/anuvis_m" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
+	          </div>
+	        </div>
+	        <div class="info">
+	          <div class="name">Anuvis Mejia</div>
+	          <b>Full Stack Dev</b> who makes easy to change and easy to create new elements.
+	          <div class="contacts">
+	            <a href="http://www.anuvism.com/" target="_blank">http://anuvism.com/</a>
+	            <br>
+	            <a href="https://twitter.com/anuvis_m" target="_blank">@anuvis_m</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="member-wrapper">
+	      <div class="member">
+	        <div class="photo-wrapper">
+	          <div class="photo">
+	            <img src="../../common-files/img/crew/sergey-s.png" alt="">
+	          </div>
+	          <div class="overlay">
+	            <a href="https://blockchain.info/address/18sf1jgrdXF9BzJtxtiwzyqjkkAsr5SSz1" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
+	            <a href="https://github.com/marknatera" target="_blank"><span class="fa fa-github fa-3x"></span></a>
+	            <a href="https://twitter.com/marknatera" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
+	          </div>
+	        </div>
+	        <div class="info">
+	          <div class="name">Mark Natera</div>
+	          <b>Agile Full Stack Dev</b> who makes easy to change and easy to create new elements.
+	          <div class="contacts">
+	            <a href="http://markn.co/" target="_blank">http://markn.co/</a>
+	            <br>
+	            <a href="https://twitter.com/marknatera" target="_blank">@marknatera</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="member-wrapper">
+	      <div class="member">
+	        <div class="photo-wrapper">
+	          <div class="photo">
+	            <img src="../../common-files/img/crew/adrian-v.png" alt="">
+	          </div>
+	          <div class="overlay">
+	            <a href="https://blockchain.info/address/1QAwuJdtDEGDyNBZhhWxbssLweaxQRRUqV" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
+	            <a href="https://github.com/tonycarballeira" target="_blank"><span class="fa fa-github fa-3x"></span></a>
+	            <a href="https://www.linkedin.com/in/tonycarballeira" target="_blank"><span class="fa fa-linkedin fa-3x"></span></a>
+	          </div>
+	        </div>
+	        <div class="info">
+	          <div class="name">Tony Carballeira</div>
+	          <b>Full Stack Dev</b> who makes easy to change and easy to create new elements.
+	          <div class="contacts">
+	            <a href="https://enigmatic-meadow-2101.herokuapp.com/" target="_blank">Tony Carballeira</a>
+	            <br>
+	            <a href="https://www.linkedin.com/in/tonycarballeira" target="_blank">@tonycarballeira</a>
 	          </div>
 	        </div>
 	      </div>
@@ -100,6 +175,6 @@
 </section>
 <div class="footer-12">
 	<div class="container">
-	    Made with <span class="fui-heart"> </span> in The Lab
+	    Made with <span class="fa fa-heart" style="color:red;"> </span> in The Lab
 	</div>
 </div>
