--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,7 +1,7 @@
 <% if !user_signed_in? %>
 <li><%= link_to "Sign in", new_user_session_path %></li>
 <form class="navbar-form pull-left">
-	<li><%= link_to "Sign up", new_user_registration_path, :class=>"btn btn-success" %></li>
+	<li><%= link_to "Sign up", new_user_registration_path, :class=>"btn btn-tombstone" %></li>
 </form>
 <% else %>
 <li><%= link_to "My Wallet", inside_path %></li>
