Modified Views For Btcaddy

--- a/app/views/claims/_form.html.erb
+++ b/app/views/claims/_form.html.erb
@@ -12,6 +12,10 @@
 
   <% end %>
 
+  <div class="field">
+    <%= f.label :btcaddy %><br>
+    <%= f.text_field :btcaddy %>
+  </div>
 
 
   <div class="field">
