You gonna like the homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,11 @@
 <% title("Home") %>
 <section class="header-10-sub v-center">
     <div class="background">
-        <video autoplay="" id="bgvid" loop="" muted="">
-<source src="//s3.amazonaws.com/miamibitcoinhackathon/assets/miami-fe8bf1afbf8fb94c746658135b001eaa.webm" type="video/webm">
-<source src="//s3.amazonaws.com/miamibitcoinhackathon/assets/miami-aa88d3b59f53cde9ffab4f866a69a0d8.mp4" type="video/mp4">
-<source src="//s3.amazonaws.com/miamibitcoinhackathon/assets/miami-9a74f703d10fcbde57b4b0818beb2368.ogv" type="video/ogg">
-</video>
     </div>
     <div>
         <div class="container">
             <div class="hero-unit">
+            	<%= image_tag 'logo-bkg.png', style: "width:300px;" %>
                 <h1 style="text-transform: uppercase;">From the grave to your wallet</h1>
                 <p>
                     Tombstone creates two keys that can be joined
@@ -175,6 +171,6 @@
 </section>
 <div class="footer-12">
 	<div class="container">
-	    Made with <span class="fa fa-heart" style="color:red;"> </span> in The Lab
+	    Made with <span class="fa fa-heart" style="color:red;"> </span> @ The Lab
 	</div>
 </div>
