--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3134,7 +3134,7 @@ section * {
   }
 }
 .header-10-sub .background {
-  background-image: url('../../../common-files/img/header/img-3.jpg');
+  background-image: url(image-path("bkg.jpg"));
   opacity: 20;
   filter: alpha(opacity=2000);
   opacity: 0.2;
@@ -3188,6 +3188,11 @@ section * {
   margin: 0;
   padding: 30px 40px;
 }
+.header-10-sub .hero-unit img {
+  display: block;
+  margin: 0 auto 10px;
+}
+
 @media (max-width: 480px) {
   .header-10-sub .hero-unit.hero-unit-bordered h1 {
     font-size: 22px;
