--- a/app/views/preferences/show.html.erb
+++ b/app/views/preferences/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 <%= link_to 'Edit', edit_preference_path(@preference) %> |
-<%= link_to 'Back', preferences_path(@preference) %>
+<%= link_to 'Back', preferences_path %>
 </div>
