--- a/app/views/claims/_form.html.erb
+++ b/app/views/claims/_form.html.erb
@@ -37,11 +37,18 @@
     <%= f.label :keytwo %><br>
     <%= f.text_field :keytwo %>
   </div>
+
+  <div class="field">
+    <%= form_for @claim, :url => claims_path, :html => { :multipart => true } do |form| %>
+    <%= form.file_field :upload %>
+
+</div>
    
   
   <div class="actions">
     <%= f.submit %>
   </div>
 
+<% end %>
 <% end %>
 </div>
