Diablo loco Video's Meng

--- a/app/assets/stylesheets/crew.scss
+++ b/app/assets/stylesheets/crew.scss
@@ -1139,6 +1139,7 @@ section * {
 .crew-4 {
   padding-top: 110px;
   padding-bottom: 110px;
+  background: url(http://subtlepatterns.com/patterns/symphony.png);
 }
 .crew-4 h3 {
   margin: 0 0 73px;
