--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Ney Hernandez</div>
-	          <b>Front Developer</b> who makes easy to change and easy to create new elements.
+	          <b>Front Developer</b> Front end designer and html5, CSS3, JS coder.
 	          <div class="contacts">
 	            <a href="https://github.com/gitney" target="_blank">https://github.com/gitney</a>
 	            <br>
