--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,7 +62,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Isaac Weinbach</div>
-	          <b>The Heartbeat</b> who makes easy to change and easy to create new elements.
+	          <b>The Heartbeat</b> doesn't care that guac is extra.
 	          <div class="contacts">
 	            <a href="http://www.isaacweinbach.co/" target="_blank">http://isaacweinbach.co/</a>
 	            <br>
