--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -85,7 +85,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Chris Scott</div>
-	          <b>Product Designer</b> who makes easy to change and easy to create new elements.
+	          <b>Product Designer</b>When it comes to pizza, eats the crust first.
 	          <div class="contacts">
 	            <a href="https://github.com/CyberStrike" target="_blank">https://github.com/CyberStrike</a>
 	            <br>
@@ -110,7 +110,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Anuvis Mejia</div>
-	          <b>Full Stack Dev</b> who makes easy to change and easy to create new elements.
+	          <b>Full Stack Dev</b> cuts his own hair.
 	          <div class="contacts">
 	            <a href="http://www.anuvism.com/" target="_blank">http://anuvism.com/</a>
 	            <br>
@@ -133,7 +133,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Mark Natera</div>
-	          <b>Agile Full Stack Dev</b> who makes easy to change and easy to create new elements.
+	          <b>Agile Full Stack Dev</b> never late.
 	          <div class="contacts">
 	            <a href="http://markn.co/" target="_blank">http://markn.co/</a>
 	            <br>
@@ -156,7 +156,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Tony Carballeira</div>
-	          <b>Full Stack Dev</b> who makes easy to change and easy to create new elements.
+	          <b>Full Stack Dev</b> loves to build shelves from Wal-mart.
 	          <div class="contacts">
 	            <a href="https://enigmatic-meadow-2101.herokuapp.com/" target="_blank">Tony Carballeira</a>
 	            <br>
