--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -4,7 +4,7 @@
 	<li><%= link_to "Sign up", new_user_registration_path, :class=>"btn btn-tombstone" %></li>
 </form>
 <% else %>
-<li><%= link_to "My Wallet", wallet_path %></li>
+<li><%= link_to "My Wallet", wallets_path %></li>
 <li><%= link_to "Edit your account", edit_user_registration_path %></li>
 
 <% if current_user.admin? %>
