--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= wallet.key %></td>
         <td><%= wallet.secret %></td>
-        <td><%= link_to 'Show', wallet %></td>
+        <td><%= link_to 'Show', wallet_path(wallet) %></td>
         <td><%= link_to 'Edit', edit_wallet_path(wallet) %></td>
-        <td><%= link_to 'Destroy', wallet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', wallet_path(wallet), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
