--- a/app/views/claims/_form.html.erb
+++ b/app/views/claims/_form.html.erb
@@ -11,6 +11,10 @@
       </ul>
 
   <% end %>
+  <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id %>
+  </div>
 
   <div class="field">
     <%= f.label :btcaddy %><br>
