--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -110,7 +110,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Anuvis Mejia</div>
-	          <b>Full Stack Dev</b> cuts his own hair.
+	          <b>Full Stack Dev</b> cuts his own hair.<br>&nbsp;
 	          <div class="contacts">
 	            <a href="http://www.anuvism.com/" target="_blank">http://anuvism.com/</a>
 	            <br>
@@ -133,7 +133,7 @@
 	        </div>
 	        <div class="info">
 	          <div class="name">Mark Natera</div>
-	          <b>Agile Full Stack Dev</b> never late.
+	          <b>Agile Full Stack Dev</b> never late.<br>&nbsp;
 	          <div class="contacts">
 	            <a href="http://markn.co/" target="_blank">http://markn.co/</a>
 	            <br>
