added some more api calls for coinkite

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,14 @@
 <% title("Home") %>
-<section class="header-10-sub v-center">
-    <div class="background">
-    </div>
-    <div>
-        <div class="container">
-            <div class="hero-unit">
-            	<%= image_tag 'logo-bkg.png', style: "width:300px;" %>
-                <h1 style="text-transform: uppercase;">From the grave to your wallet</h1>
-                <p>
-                    Tombstone creates two keys that can be joined
-                    <br/>
-                    in order to access your bit wallet.
-                </p>
-            </div>
+<section class="header-10-sub">
+    <div class="container">
+        <div class="hero-unit">
+            <%= image_tag 'bitcoin.svg', style: "width:300px;" %>
+            <h1 style="text-transform: uppercase;">From the grave to their wallet</h1>
+            <p>
+                Tombstone creates two keys that can be joined
+                <br/>
+                in order to access your bit wallet.
+            </p>
         </div>
     </div>
 	<a class="control-btn fa fa-angle-down fa-4x" href="#content-12"> </a>
