contain element for views

--- a/app/views/claims/show.html.erb
+++ b/app/views/claims/show.html.erb
@@ -1,3 +1,4 @@
+<div class = "contain">
 <h1>Your Claim</h1>
 
 <p id="notice"><%= notice %></p>
@@ -22,3 +23,4 @@
 
 <%= link_to 'Edit', edit_claim_path(@claim) %> |
 <%= link_to 'Back', claims_path %>
+</div>
