--- a/app/views/wallets/edit.html.erb
+++ b/app/views/wallets/edit.html.erb
@@ -1,6 +1,8 @@
+<div class = "contain">
 <h1>Editing Wallet</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @wallet %> |
 <%= link_to 'Back', wallets_path %>
+</div>
