--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,3 +1,4 @@
+<div class = "contain">
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Wallets</h1>
@@ -27,3 +28,4 @@
 <br>
 
 <%= link_to 'New Wallet', new_wallet_path %>
+</div>
