--- a/app/views/claims/_form.html.erb
+++ b/app/views/claims/_form.html.erb
@@ -1,3 +1,5 @@
+
+<div class = "contain">
 <div class="text-center" id="color">
 <%= form_for(@claim) do |f| %>
   <% if @claim.errors.any? %>
@@ -53,4 +55,5 @@
   </div>
 
 <% end %>
+</div>
 </div>
