--- a/app/views/claims/edit.html.erb
+++ b/app/views/claims/edit.html.erb
@@ -1,6 +1,8 @@
+<div class = "contain">
 <h1>Edit Claim</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @claim %> |
 <%= link_to 'Back', claims_path %>
+</div>
