--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="contain">
 <div class="row">
   <div class="col-sm-6 ">
     <h1>Edit your profile</h1>
@@ -61,3 +62,4 @@
       <% end %>
     </div>
   </div>
+</div>
