--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class = "contain">
 <div class="row">
   <div class="col-sm-6">
     <h1>Sign up</h1>
@@ -56,3 +57,4 @@
 
     </div>
   </div>
+</div>
