--- a/app/views/wallets/show.html.erb
+++ b/app/views/wallets/show.html.erb
@@ -1,3 +1,4 @@
+<div class = "contain">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -12,3 +13,4 @@
 
 <%= link_to 'Edit', edit_wallet_path(@wallet) %> |
 <%= link_to 'Back', wallets_path %>
+<div>
