--- a/app/assets/stylesheets/wallets.scss
+++ b/app/assets/stylesheets/wallets.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the wallet controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.contain{
+  padding-left: 12em;
+  padding-bottom: 2cm;
+}
