--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
 	      <div class="member">
 	        <div class="photo-wrapper">
 	          <div class="photo">
-	            <img src="../../common-files/img/crew/vladimir-k.png" alt="">
+	            <img src="" alt="">
 	          </div>
 	          <div class="overlay">
 	            <a href="https://blockchain.info/address/1GN4ENR3qgXmwB82NprT6zuBfUShev3Aca" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
@@ -96,7 +96,7 @@
 	      <div class="member">
 	        <div class="photo-wrapper">
 	          <div class="photo">
-	            <img src="../../common-files/img/crew/vladimir-k.png" alt="">
+	            <img src="" alt="">
 	          </div>
 	          <div class="overlay">
 	            <a href="https://blockchain.info/address/1DAQUFD2Jypu7vEqiydBLiBhev8UZi7G69" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
