--- a/app/views/claims/_form.html.erb
+++ b/app/views/claims/_form.html.erb
@@ -10,9 +10,15 @@
       </ul>
 
   <% end %>
-  <div class="field">
+  <div class="form-group">
+    <div class="field">
+      <div class="row">
+          <div class="col-sm-6">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="field">
