improved wording on banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,11 @@
     <div class="container">
         <div class="hero-unit">
             <%= image_tag 'bitcoin.svg', style: "width:300px;" %>
-            <h1 style="text-transform: uppercase;">From the grave to their wallet</h1>
+            <h1 style="text-transform: uppercase;">From grave to wallet</h1>
             <p>
-                Tombstone creates two keys that can be joined
+                Tombstone generates two keys that can be joined
                 <br/>
-                in order to access your bit wallet.
+                in order to access a bit wallet.
             </p>
         </div>
     </div>
@@ -95,10 +95,10 @@
 	    <div class="member-wrapper">
 	      <div class="member">
 	        <div class="photo-wrapper">
-	          <div class="photo">
-	            <img src="" alt="">
+	          <div class="photo" >
+	            <img src="" alt="" >
 	          </div>
-	          <div class="overlay">
+	          <div class="overlay" >
 	            <a href="https://blockchain.info/address/1DAQUFD2Jypu7vEqiydBLiBhev8UZi7G69" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
 	            <a href="https://github.com/Ameji012" target="_blank"><span class="fa fa-github fa-3x"></span></a>
 	            <a href="https://twitter.com/anuvis_m" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
